# proiect-ml-AndreiChiraRazvan

./: .gitignore  app.py  pyproject.toml
classification/: classification_air_quality.ipynb
pages/: 1_🏠_Regresie.py  2_🌫️_Clasificare.py
regression/: regression.ipynb
