[project]
name = "proiect-ml-andreichirarazvan"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "catboost>=1.2.10",
    "interpret>=0.7.8",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scikit-optimize>=0.10.2",
    "seaborn>=0.13.2",
    "shap>=0.51.0",
    "xgboost>=3.2.0",
]
